Updated javascript function to accept ddl as argument

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -128,7 +128,7 @@
             <td>{{this.mNumber}}</td>
             <td>{{this.email}}</td>
             <td>
-                <select id="userRole" onchange="setUserPermission('{{this._id}}')">
+                <select id="userRole" onchange="setUserPermission(this, '{{this._id}}')">
                     {{#select this.profile.roleName}}
                     <option value="Blocked">Blocked</option>
                     <option value="User">User</option>
@@ -227,8 +227,8 @@
             });
         }
 
-        function setUserPermission(userId) {
-            alert($("#userRole").val());
+        function setUserPermission(ddlRole, userId) {
+            alert(ddlRole.value);
             $.ajax({
                 url: '/updateUserPermissions',
                 dataType: 'json',
