POST endpoint for user permissions now gets proper value
Now the endpoint should properly update the users permission so that its
not always "blocked"

--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -228,11 +228,10 @@
         }
 
         function setUserPermission(ddlRole, userId) {
-            alert(ddlRole.value);
             $.ajax({
                 url: '/updateUserPermissions',
                 dataType: 'json',
-                data: { "userId": userId, "roleName":"" },
+                data: { "userId": userId, "roleName": ddlRole.value },
                 type: "POST",
                 success: function (data) {
 
