--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -1,17 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/assets/main.css" />
-    <script src="/assets/lib/jquery-2.1.4.min.js"></script>
-    <script src="/assets/lib/bootstrap.min.js"></script>
-    <script src="/assets/main.js"></script>
-    <script src="/assets/application.js"></script>
-</head>
-<body>
-    <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
+﻿    <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
    
     <div id="createUserModal" class="modal fade" role="dialog" tabindex="">
         <div class="modal-dialog">
@@ -141,8 +128,6 @@
         </tr>
         {{/each}}
     </table>
-</body>
-</html>
 
 <script type="text/javascript">
     $('#deleteUserModal').on('show.bs.modal', function (e) {
