--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -9,7 +9,7 @@
   </div>
 </footer>
 
-<script>
+<script type="text/javascript">
     var dt = new Date();
     document.getElementById("year").innerHTML = "© " + dt.getFullYear() + " Kenneth Fechter. All Rights Reserved";
 </script>
