--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -110,7 +110,7 @@
         </tr>
         {{#each users}}
         <tr>
-            <td>{{this.profile.fullName}}{{id}}</td>
+            <td>{{this.profile.fullName}}</td>
             <td>{{this.profile.displayName}}</td>
             <td>{{this.mNumber}}</td>
             <td>{{this.email}}</td>
