Updates to user roles
added Site owner role. This role will be non deletable, but
transferrable.

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,6 +10,9 @@
                 <li><a href="/usermanagement">User Management</a></li>
                <li><a href="/admin">System Administration</a></li>
           {{/if}}
+          {{#if user.isSiteOwner}}
+          <li><a href="/transferOwnership">Transfer Site Ownership</a></li>
+          {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {{#unless user}}
