fix for html coonsole errors

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,7 @@
 
 <footer>
   <div class="container text-center">
-    <p class="pull-left" id="year"/>
+    <p class="pull-left" id="year"></p>
     <ul class="pull-right list-inline">
       <li><a href="https://github.com/kfechter/Custos">GitHub Project</a></li>
       <li><a href="https://github.com/kfechter/Custos/issues">Issues</a></li>
