create user endpint does not sucessfully refresh the view

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -103,7 +103,9 @@
             data: { "userEmail": userEmail, "emailBody": emailBody },
             type: "POST",
             success: function (data) {
-
+                if (typeof data.redirect == "string") {
+                    window.location = data.redirect
+                }
             }
         });
     }
