moved res.send outside of database function call

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -87,6 +87,7 @@
             success: function (data) {
                 if (typeof data.redirect == "string") {
                     window.location = data.redirect
+                    console.log(data.redirect);
                 }
             }
         });
