updated endpoint for user contact functionality

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -101,7 +101,7 @@
         $.ajax({
             url: '/contactUser',
             dataType: 'json',
-            data: { "userEmail": userEmail, "emailBody": emailBody },
+            data: { "userEmail": userEmail, "emailBody": emailBody, "emailSubject": emailSubject },
             type: "POST",
             success: function (data) {
                 if (typeof data.redirect == "string") {
