made inventory search header only show if authed user.
Makes it so you can't access inventory functionality when no one is
authed.

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,9 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="/inventory">Inventory Search</a></li>
+          {{#if user}}
+            <li><a href="/inventory">Inventory Search</a></li>
+          {{/if}}
           {{#if user.isSiteAdmin}}
                 <li><a href="/usermanagement">User Management</a></li>
                <li><a href="/admin">System Administration</a></li>
