--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -1,4 +1,4 @@
-﻿<h1>Custos: The UC Robotics Inventory Management System</h1>
+﻿<h1>Custos: The UC Robotics Kenventory Management System</h1>
 <p class="lead">A boilerplate for Node.js web applications.</p>
 <hr />
 <div class="row">
