Added transfer ownership functionality, added new menus for treasury
Transfer ownership now links to a dialog, which calls a post. the menus
for treasury are currently linked to empty functions, but those will
come later.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -111,6 +111,22 @@
         });
     }
 
+    function transferOwnership() {
+        var targetUsername = $('#transferTargetUsername').val();
+
+        $.ajax({
+            url: '/transferOwnership',
+            dataType: 'json',
+            data: { "transferUsername": targetUsername, "currentPage" : window.location },
+            type: "POST",
+            success: function (data) {
+                if (typeof data.redirect == "string") {
+                    window.location = data.redirect
+                }
+            }
+        });
+    }
+
     function setUserPermission(ddlRole, userId) {
         $.ajax({
             url: '/updateUserPermissions',
