--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,8 +9,17 @@
             <li><a href="/inventory">Inventory Search</a></li>
           {{/if}}
           {{#if user.isSiteAdmin}}
-                <li><a href="/usermanagement">User Management</a></li>
+               <li><a href="/usermanagement">User Management</a></li>
                <li><a href="/admin">System Administration</a></li>
+               <li class="dropdown">
+                   <a href="#" data-toggle="dropdown" class="dropdown-toggle" role="button">Treasury</a>
+                   <i class="caret"></i>
+                       <ul class="dropdown-menu">
+                           <li><a href="/purchaseorder">Create Purchase Order</a></li>
+                           <li class="divider"></li>
+                           <li><a href="/reimbursement">Create Reimbursement Form</a></li>
+                       </ul>
+                </li>
           {{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
