--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -61,74 +61,99 @@
         </div>
     </div>
 
-    <div id="contactUserModal" class="modal fade" role="dialog" tabindex="">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Contact User</h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" name="commentform">
-                        <div class="form-group">
-                            <label class="control-label col-md-4" for="contactEmail">Email Address</label>
-                            <div class="col-md-6">
-                                <input type="email" readonly="readonly" class="form-control" id="contactEmail" name="contactEmail" />
-                            </div>
+<div id="transferSiteOwnershipModal" class="modal fade" role="dialog" tabindex="">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Contact User</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" name="transferform">
+                    <div class="form-group">
+                        <label class="control-label col-md-4" for="transferUserName">E-mail of Transfer Target</label>
+                        <div class="col-md-6">
+                            <input type="text" class="form-control" id="transferTargetUsername" name="transferTargetUsername">
                         </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-4" for="subject">Subject</label>
-                            <div class="col-md-6">
-                                <input type="text" class="form-control" id="subject" name="subject" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-4" for="body">Email Body</label>
-                            <div class="col-md-6">
-                                <textarea rows="6" class="form-control" id="body" name="body"></textarea>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" onclick="contactUser()" data-dismiss="modal">Contact User</button>
-                </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-default" onclick="transferOwnership()" data-dismiss="modal">Contact User</button>
             </div>
         </div>
     </div>
+</div>
 
-     <table class="table-striped table-condensed table-hover table table-bordered">
-        <tr>
-            <th>Full Name</th>
-            <th>Display Name</th>
-            <th>M Number</th>
-            <th>E-Mail</th>
-            <th>User Role</th>
-            <th>Contact User</th>
-            <th>Delete User</th>
-        </tr>
-        {{#each users}}
-        <tr>
-            <td>{{this.profile.fullName}}</td>
-            <td>{{this.profile.displayName}}</td>
-            <td>{{this.mNumber}}</td>
-            <td>{{this.email}}</td>
-            <td>
-                {{#unless this.isSiteOwner}}
-                <select id="userRole" onchange="setUserPermission(this, '{{this._id}}')">
-                    {{#select this.profile.roleName}}
-                    <option value="Blocked">Blocked</option>
-                    <option value="User">User</option>
-                    <option value="SiteAdmin">Site Admin</option>
-                    {{/select}}
-                </select>
-                {{else}}
-                The site owner permissions cannot be changed except via transfer
-                {{/unless}}
-            </td>
-            <td><a data-toggle="modal" data-target="#contactUserModal" data-user-email="{{this.email}}">Contact User</a></td>
-            <td>{{#unless this.isSiteOwner}}<a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}}" data-user-email="{{this.email}}">Delete User</a>{{/unless}}</td>
-        </tr>
-        {{/each}}
-    </table>
+        <div id="contactUserModal" class="modal fade" role="dialog" tabindex="">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Contact User</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="form-horizontal" name="commentform">
+                            <div class="form-group">
+                                <label class="control-label col-md-4" for="contactEmail">Email Address</label>
+                                <div class="col-md-6">
+                                    <input type="email" readonly="readonly" class="form-control" id="contactEmail" name="contactEmail" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4" for="subject">Subject</label>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" id="subject" name="subject" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4" for="body">Email Body</label>
+                                <div class="col-md-6">
+                                    <textarea rows="6" class="form-control" id="body" name="body"></textarea>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-default" onclick="contactUser()" data-dismiss="modal">Contact User</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <table class="table-striped table-condensed table-hover table table-bordered">
+            <tr>
+                <th>Full Name</th>
+                <th>Display Name</th>
+                <th>M Number</th>
+                <th>E-Mail</th>
+                <th>User Role</th>
+                <th>Contact User</th>
+                <th>Delete User</th>
+            </tr>
+            {{#each users}}
+            <tr>
+                <td>{{this.profile.fullName}}</td>
+                <td>{{this.profile.displayName}}</td>
+                <td>{{this.mNumber}}</td>
+                <td>{{this.email}}</td>
+                <td>
+                    {{#unless this.isSiteOwner}}
+                    <select id="userRole" onchange="setUserPermission(this, '{{this._id}}')">
+                        {{#select this.profile.roleName}}
+                        <option value="Blocked">Blocked</option>
+                        <option value="User">User</option>
+                        <option value="SiteAdmin">Site Admin</option>
+                        {{/select}}
+                    </select>
+                    {{else}}
+                    The site owner permissions cannot be changed except via transfer
+                    {{/unless}}
+                </td>
+                <td><a data-toggle="modal" data-target="#contactUserModal" data-user-email="{{this.email}}">Contact User</a></td>
+                <td>{{#unless this.isSiteOwner}}<a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}}" data-user-email="{{this.email}}">Delete User</a>{{/unless}}</td>
+            </tr>
+            {{/each}}
+        </table>
