Fixed issue with carat

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -12,8 +12,9 @@
                <li><a href="/usermanagement">User Management</a></li>
                <li><a href="/admin">System Administration</a></li>
                <li class="dropdown">
-                   <a href="#" data-toggle="dropdown" class="dropdown-toggle" role="button">Treasury</a>
-                   <i class="caret"></i>
+                   <a href="#" data-toggle="dropdown" class="dropdown-toggle" role="button">Treasury
+                       <i class="caret"></i>
+                   </a>
                        <ul class="dropdown-menu">
                            <li><a href="/purchaseorder">Create Purchase Order</a></li>
                            <li class="divider"></li>
