--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -9,6 +9,30 @@
   <link rel="stylesheet" href="/assets/main.css" />
 </head>
 <body>
+    <div id="transferSiteOwnershipModal" class="modal fade" role="dialog" tabindex="">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Contact User</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal" name="transferform">
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="transferUserName">E-mail of Transfer Target</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" id="transferTargetUsername" name="transferTargetUsername">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" onclick="transferOwnership()" data-dismiss="modal">Contact User</button>
+                </div>
+            </div>
+        </div>
+    </div>
 	{{>header}}
 	<div class="container">
 		{{>flash}}
