was trying to open the wrong modal
womp womp

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -49,7 +49,7 @@
             <li><a href="/account">My Account</a></li>
               <li class="divider"></li>
               {{#if user.isSiteOwner}}
-              <li><a data-toggle="modal" data-target="#createUserModal">Transfer Site Ownership</a></li>
+              <li><a data-toggle="modal" data-target="#transferSiteOwnershipModal">Transfer Site Ownership</a></li>
               <li class="divider"></li>
               {{/if}}
             <li><a href="/logout">Logout</a></li>
