Updated text on modal button
Contact - Transfer

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,7 +28,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" onclick="transferOwnership()" data-dismiss="modal">Contact User</button>
+                    <button type="button" class="btn btn-default" onclick="transferOwnership()" data-dismiss="modal">Transfer Ownership</button>
                 </div>
             </div>
         </div>
