--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -141,7 +141,7 @@
         $.ajax({
             url: '/transferOwnership',
             dataType: 'json',
-            data: { "transferUsername": targetUsername, "currentPage" : window.location },
+            data: { "transferUsername": targetUsername, "currentPage" : window.location.href },
             type: "POST",
             success: function (data) {
                 if (typeof data.redirect == "string") {
