--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,7 +14,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Contact User</h4>
+                    <h4 class="modal-title">Transfer Site Ownership</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form-horizontal" name="transferform">
