--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-4" for="transferUserName">E-mail of Transfer Target</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" id="transferTargetUsername" name="transferTargetUsername">
+                                <input type="email" class="form-control" id="transferTargetUsername" name="transferTargetUsername">
                             </div>
                         </div>
                     </form>
