--- a/views/partials/transferOwnership.hbs
+++ b/views/partials/transferOwnership.hbs
@@ -1,5 +1,5 @@
 ﻿<h1>Transfer Site Ownership</h1>
-<p>This will revoke your ownership and site admin access, and transfer it to another user</p>
+<p>This will revoke your site ownership, and transfer it to another user</p>
 <form class="form-horizontal" name="transferform" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label class="control-label col-md-4" for="transferUserName">E-mail of Transfer Target</label>
