--- a/views/partials/transferOwnership.hbs
+++ b/views/partials/transferOwnership.hbs
@@ -8,6 +8,6 @@
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Transfer Ownership</button>
+        <button class="btn btn-primary" onclick="transferOwnership()">Transfer Ownership</button>
     </div>
 </form>
