--- a/views/partials/transferOwnership.hbs
+++ b/views/partials/transferOwnership.hbs
@@ -1,6 +1,6 @@
 ﻿<h1>Transfer Site Ownership</h1>
 <p>This will revoke your site ownership, and transfer it to another user</p>
-<form class="form-horizontal" name="transferform" method="post">
+<form class="form-horizontal" name="transferform">
     <div class="form-group">
         <label class="control-label col-md-4" for="transferUserName">E-mail of Transfer Target</label>
         <div class="col-md-6">
