--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,8 +9,7 @@
             <li><a href="/inventory">Inventory Search</a></li>
           {{/if}}
           {{#if user.isSiteAdmin}}
-               <li><a href="/usermanagement">User Management</a></li>
-               <li><a href="/admin">System Administration</a></li>
+               <li><a href="/usermanagement">System Administration</a></li>
                <li class="dropdown">
                    <a href="#" data-toggle="dropdown" class="dropdown-toggle" role="button">Treasury
                        <i class="caret"></i>
