--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -1,4 +1,6 @@
-﻿    <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
+﻿    <h1>Users</h1>
+
+    <button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createUserModal">Create User</button>
    
     <div id="createUserModal" class="modal fade" role="dialog" tabindex="">
         <div class="modal-dialog">
@@ -132,3 +134,7 @@
             </tr>
             {{/each}}
         </table>
+
+
+<h1>Projects</h1>
+<button type="button" class="btn btn-info btn-lg" style="margin-bottom: 10px;" data-toggle="modal" data-target="#createProjectModal">Create Project</button>
