--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -1,5 +1,4 @@
-﻿<h1>Custos: The UC Robotics Kenventory Management System</h1>
-<p class="lead">A boilerplate for Node.js web applications.</p>
+﻿<h1>{{userName}}'s Dashboard</h1>
 <hr />
 <div class="row">
     <div class="col-sm-6">
