added header to my projects category

--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -11,6 +11,8 @@
         </ul>    
     </div>
     <div class="col-sm-6">
+        <h2>My Projects</h2>
+
         <ul>
             <li style="color: red;">Dokalman - IMPORTANT INFORMATION</li>
             <li>T-Shirt Cannon</li>
