added 4th item to projects list.

--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -12,11 +12,11 @@
     </div>
     <div class="col-sm-6">
         <h2>My Projects</h2>
-
         <ul>
             <li style="color: red;">Dokalman - IMPORTANT INFORMATION</li>
             <li>T-Shirt Cannon</li>
             <li>Aero  Stuff</li>
+            <li>3D Print Things</li>
         </ul>    
     </div>
     <div class="col-sm-6">
