Fix checked out items

--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -4,6 +4,7 @@
     <div class="col-sm-6">
         <h2>My Checked Out Items</h2>
         <ul>
+            <li style="color: red;">Powertail - Due: 1/1/2014 - OVERDUE</li>
             <li>Robot Stuff - Due: 5/5/2054</li>
             <li>Neo Pixels - Due: 5/5/2016</li>
             <li>Pen - Due: 5/5/2081</li>
